WIP: Starting changes

--- a/Jupyter/0_HelloRegistrationWorld.ipynb
+++ b/Jupyter/0_HelloRegistrationWorld.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import itk\n",
-    "from itkwidgets import view, compare, checkerboard"
+    "from itkwidgets import view, compare, checkerboard\n",
+    "import ipywidgets"
    ]
   },
   {
@@ -35,34 +36,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fixed = itk.imread('data/CT_2D_head_fixed.mha', itk.F)\n",
-    "moving = itk.imread('data/CT_2D_head_moving.mha', itk.F)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3ebeb5e96b64508a72580cd02bf86c3",
+       "model_id": "507a89d20a58439b9d63fea2a81101c2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppLayout(children=(HBox(children=(Label(value='Link:'), Checkbox(value=False, description='cmap'), Checkbox(v…"
+       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ef8c6095e414b98ad018425ef523502",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "fixedUploader = ipywidgets.FileUpload(\n",
+    "    accept='image/*,.nrrd,.mha,.nii',\n",
+    "    multiple=False\n",
+    ")\n",
+    "display(fixedUploader)\n",
+    "movingUploader = ipywidgets.FileUpload(\n",
+    "    accept='image/*,.nrrd,.mha,.nii',\n",
+    "    multiple=False\n",
+    ")\n",
+    "display(movingUploader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "[uploaded_file] = fixedUploader.value\n",
+    "# firstF=uploaded_file['name']\n",
+    "print(fixedUploader)\n",
+    "\n",
+    "# write to temporary fixed image (I don't know how to read image from memory in Python)\n",
+    "tempFilename=\"./fixed.nrrd\" # +uploaded_file[\"name\"].asString()\n",
+    "with open(tempFilename, \"wb\") as fp:\n",
+    "    # fp.write(uploaded_file[\"content\"])\n",
+    "    pass\n",
+    "\n",
+    "# fixed = itk.imread(uploaded_file[\"content\"], itk.F)\n",
+    "\n",
+    "import os\n",
+    "os.remove(tempFilename)\n",
+    "# moving = itk.imread('data/CT_2D_head_moving.mha', itk.F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "compare(fixed, moving, ui_collapsed=True)"
    ]
@@ -76,24 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c0aa44dab00479eb61af83594bab01a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF2; proxy…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkerboard(fixed, moving, pattern=10)"
    ]
@@ -281,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
