--- a/Jupyter/0_HelloRegistrationWorld.ipynb
+++ b/Jupyter/0_HelloRegistrationWorld.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "507a89d20a58439b9d63fea2a81101c2",
+       "model_id": "5876547590ee4905b5019bad890146e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ef8c6095e414b98ad018425ef523502",
+       "model_id": "4b39fb69047a4ff1b241f83d63e2cb05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,6 +74,10 @@
     "    multiple=False\n",
     ")\n",
     "display(fixedUploader)\n",
+    "\n",
+    "# these FileUpload widgets have some maximum supported file size\n",
+    "# which is between 3.5MB and 35MB\n",
+    "\n",
     "movingUploader = ipywidgets.FileUpload(\n",
     "    accept='image/*,.nrrd,.mha,.nii',\n",
     "    multiple=False\n",
@@ -83,49 +87,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[uploaded_file] = fixedUploader.value\n",
-    "# firstF=uploaded_file['name']\n",
-    "print(fixedUploader)\n",
-    "\n",
-    "# write to temporary fixed image (I don't know how to read image from memory in Python)\n",
-    "tempFilename=\"./fixed.nrrd\" # +uploaded_file[\"name\"].asString()\n",
+    "# write to temporary image file\n",
+    "# I don't know how to read image from memory in Python\n",
+    "tempFilename=\"./fixed.nrrd\"\n",
     "with open(tempFilename, \"wb\") as fp:\n",
-    "    # fp.write(uploaded_file[\"content\"])\n",
-    "    pass\n",
+    "    fp.write(fixedUploader.data[0]) # syntax for ipywidgets <= 7\n",
+    "fixed = itk.imread(tempFilename, itk.F)\n",
     "\n",
-    "# fixed = itk.imread(uploaded_file[\"content\"], itk.F)\n",
+    "tempFilename=\"./moving.nrrd\"\n",
+    "with open(tempFilename, \"wb\") as fp:\n",
+    "    fp.write(movingUploader.data[0]) # syntax for ipywidgets <= 7\n",
+    "moving = itk.imread(tempFilename, itk.F)\n",
     "\n",
     "import os\n",
-    "os.remove(tempFilename)\n",
-    "# moving = itk.imread('data/CT_2D_head_moving.mha', itk.F)"
+    "os.remove(\"./fixed.nrrd\")\n",
+    "os.remove(\"./moving.nrrd\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf00c36bae514105bf8ff246c44a1274",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "AppLayout(children=(HBox(children=(Label(value='Link:'), Checkbox(value=False, description='cmap'), Checkbox(v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "compare(fixed, moving, ui_collapsed=True)"
    ]
@@ -139,18 +141,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b912fe76b184b388773c6f35f2ca20a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF3; proxy…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "checkerboard(fixed, moving, pattern=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'itk' has no attribute 'elastix_registration_method'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-37e04dd00ef2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Register!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mregistered_moving\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0melastix_registration_method\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfixed\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmoving\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\dev\\hasi\\jupyter\\pyenv\\lib\\site-packages\\itkLazy.py\u001b[0m in \u001b[0;36m__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m         \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mModuleType\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mnot_loaded\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[0mmodule\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__belong_lazy_attributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'itk' has no attribute 'elastix_registration_method'"
+     ]
+    }
+   ],
    "source": [
     "# Register!\n",
     "registered_moving = itk.elastix_registration_method(fixed, moving)"
@@ -329,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
