Found workaround for file size limit

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -75,8 +75,8 @@
     ")\n",
     "display(fixedUploader)\n",
     "\n",
-    "# these FileUpload widgets have some maximum supported file size\n",
-    "# which is between 3.5MB and 35MB\n",
+    "# these FileUpload widgets supported up to 10MB files\n",
+    "# https://github.com/jupyter-widgets/ipywidgets/issues/2522\n",
     "\n",
     "movingUploader = ipywidgets.FileUpload(\n",
     "    accept='image/*,.nrrd,.mha,.nii',\n",
