--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cee9d5319efb4b61a20477a41ae13c41",
+       "model_id": "bba15075ab6a4fa2953629b0f92cfccb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca9a13feef284b3dbd3fa572067bc6c3",
+       "model_id": "2657854126a74f3396790917896365e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d21b56a77d9a4f389f23acceb7c0f757",
+       "model_id": "386929357041471ca13558da756f3389",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,12 +121,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "634704e17c3c420cbf837c3b928a238c",
+       "model_id": "f9c7d666eb974b709cf79bf53ffb9a09",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppLayout(children=(Viewer(layout=Layout(grid_area='left-sidebar'), rendered_image=<itkImagePython.itkImageF2;…"
+       "AppLayout(children=(HBox(children=(Label(value='Link:'), Checkbox(value=True, description='cmap'), Checkbox(va…"
       ]
      },
      "metadata": {},
@@ -137,6 +137,8 @@
     "viewButton = ipywidgets.Button(description=\"Load and view\")\n",
     "display(viewButton)\n",
     "\n",
+    "appState={'fixed':None, 'moving':None}\n",
+    "\n",
     "def viewImages(b):\n",
     "    # write to temporary image file\n",
     "    # I don't know how to read image from memory in Python\n",
@@ -144,16 +146,16 @@
     "    tempFilename=\"./fixed_\"+ next(iter(fixedUploader.value))\n",
     "    with open(tempFilename, \"wb\") as fp:\n",
     "        fp.write(fixedUploader.data[0])\n",
-    "    fixed = itk.imread(tempFilename, itk.F)\n",
+    "    appState['fixed'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
     "\n",
     "    tempFilename=\"./moving_\"+ next(iter(movingUploader.value))\n",
     "    with open(tempFilename, \"wb\") as fp:\n",
     "        fp.write(movingUploader.data[0])\n",
-    "    moving = itk.imread(tempFilename, itk.F)\n",
+    "    appState['moving'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
     "    \n",
-    "    display(compare(fixed, moving, link_cmap=True, link_gradient_opacity=True))\n",
+    "    display(compare(appState['fixed'], appState['moving'], link_cmap=True, link_gradient_opacity=True))\n",
     "\n",
     "viewButton.on_click(viewImages)"
    ]
@@ -167,13 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dbbe2a6992d42c3af5726eb88e5338c",
+       "model_id": "a480e7ae25274280853d8400f62d1c02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,12 +189,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff724aad032a4f418f78159d1aa69349",
+       "model_id": "022a239bef0e4a1089851a1103bef103",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Viewer(annotations=False, interpolation=False, mode='z', rendered_image=<itkImagePython.itkImag…"
+       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF3; proxy…"
       ]
      },
      "metadata": {},
@@ -204,20 +206,20 @@
     "display(checkerboardButton)\n",
     "\n",
     "def checkerboardImages(b):  \n",
-    "    display(checkerboard(fixed, moving, mode='z', ui_collapsed=False))\n",
+    "    display(checkerboard(appState['fixed'], appState['moving'], ui_collapsed=False))\n",
     "\n",
     "checkerboardButton.on_click(checkerboardImages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acb3a04151f946cfae91c25737d74e0f",
+       "model_id": "95d5cf6dc4774dbeb25d516b34c4195c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,17 +231,18 @@
      "output_type": "display_data"
     },
     {
-     "ename": "AttributeError",
-     "evalue": "module 'Elastix' has no attribute 'swig'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-f72ed3184983>\u001b[0m in \u001b[0;36mregisterImages\u001b[1;34m(b)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mregisterImages\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mregistered_moving\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0melastix_registration_method\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfixed\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmoving\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcheckerboard\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfixed\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mregistered_moving\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'z'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mui_collapsed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\dev\\hasi\\jupyter\\e2\\lib\\site-packages\\itkLazy.py\u001b[0m in \u001b[0;36m__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[0mmodule\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__belong_lazy_attributes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m             \u001b[0mnamespace\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m             \u001b[0mitkBase\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLoadModule\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodule\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnamespace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloaded_lazy_modules\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodule\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnamespace\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\dev\\hasi\\jupyter\\e2\\lib\\site-packages\\itkBase.py\u001b[0m in \u001b[0;36mLoadModule\u001b[1;34m(name, namespace)\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnamespace\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m             \u001b[0mswig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnamespace\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetdefault\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'swig'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mModuleType\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'swig'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 53\u001b[1;33m             \u001b[0mswig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthis_module\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mswig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m             \u001b[1;31m# don't worry about overwriting the symbols in namespace -- any\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'Elastix' has no attribute 'swig'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c04d4436214f447697315982692bff2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF3; proxy…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -247,11 +250,18 @@
     "display(registerButton)\n",
     "\n",
     "def registerImages(b):\n",
-    "    registered_moving = itk.elastix_registration_method(fixed, moving)\n",
-    "    display(checkerboard(fixed, registered_moving, mode='z', ui_collapsed=False))\n",
+    "    registered_moving = itk.elastix_registration_method(appState['fixed'], appState['moving'])\n",
+    "    display(checkerboard(appState['fixed'], registered_moving))\n",
     "\n",
     "registerButton.on_click(registerImages)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
