Lifting the 10MB file size limit

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -55,7 +55,8 @@
     }
    ],
    "source": [
-    "# these FileUpload widgets support up to 10MB files\n",
+    "# these FileUpload widgets have maximum size\n",
+    "# controlled via jupyter_notebook_config.py\n",
     "# https://github.com/jupyter-widgets/ipywidgets/issues/2522\n",
     "fixedUploader = ipywidgets.FileUpload(\n",
     "    accept='image/*,.nrrd,.mha,.nii',\n",
