Radio buttons select registration type

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bba15075ab6a4fa2953629b0f92cfccb",
+       "model_id": "cf352e824d284922aca68bdaba24d968",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2657854126a74f3396790917896365e6",
+       "model_id": "0adb9015af864507b685fdd3f58f3e8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,32 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "386929357041471ca13558da756f3389",
+       "model_id": "01b9d2ca144e47748ee80ce041d8e19d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Button(description='Load and view', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9c7d666eb974b709cf79bf53ffb9a09",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "AppLayout(children=(HBox(children=(Label(value='Link:'), Checkbox(value=True, description='cmap'), Checkbox(va…"
       ]
      },
      "metadata": {},
@@ -170,32 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a480e7ae25274280853d8400f62d1c02",
+       "model_id": "1bf54045c4704f17977d9a99e10fce4c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Button(description='View checkerboard', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "022a239bef0e4a1089851a1103bef103",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF3; proxy…"
       ]
      },
      "metadata": {},
@@ -214,13 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95d5cf6dc4774dbeb25d516b34c4195c",
+       "model_id": "df1d3c1ee93244c6bc8d11687f1abb27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "RadioButtons(description='Type:', options=('rigid', 'affine', 'bspline'), value='rigid')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2bca7deeceae4224933874c48baeec46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,12 +220,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c04d4436214f447697315982692bff2e",
+       "model_id": "00b5ff1ae89c4bcab0a12ccee0dca32d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF3; proxy…"
+       "Output()"
       ]
      },
      "metadata": {},
@@ -247,12 +233,45 @@
     }
    ],
    "source": [
+    "regType=ipywidgets.RadioButtons(\n",
+    "    options=['rigid', 'affine', 'bspline'],\n",
+    "    value='rigid', # Defaults to 'pineapple'\n",
+    "    description='Type:',\n",
+    "    disabled=False\n",
+    ")\n",
+    "display(regType)\n",
+    "\n",
     "registerButton = ipywidgets.Button(description=\"Register and view\")\n",
     "display(registerButton)\n",
     "\n",
+    "out = ipywidgets.Output()\n",
+    "display(out)\n",
+    "\n",
     "def registerImages(b):\n",
-    "    registered_moving = itk.elastix_registration_method(appState['fixed'], appState['moving'])\n",
+    "    out.clear_output(wait=True)\n",
+    "    parameters = itk.ParameterObject.New()\n",
+    "\n",
+    "    resolutions = 3\n",
+    "    default_rigid = parameters.GetDefaultParameterMap(\"rigid\", resolutions)\n",
+    "    parameters.AddParameterMap(default_rigid)\n",
+    "\n",
+    "    if (regType.value!='rigid'):\n",
+    "        resolutions = 2\n",
+    "        default_affine = parameters.GetDefaultParameterMap(\"affine\", resolutions)\n",
+    "        parameters.AddParameterMap(default_affine)\n",
+    "\n",
+    "    if (regType.value=='bspline'):\n",
+    "        resolutions = 1\n",
+    "        default_bspline = parameters.GetDefaultParameterMap(\"bspline\", resolutions)\n",
+    "        parameters.AddParameterMap(default_bspline)\n",
+    "\n",
+    "    parameters.RemoveParameter(\"ResultImageFormat\")\n",
+    "    with out:\n",
+    "        print('Executing '+regType.value+' registration. Please wait...')\n",
+    "    \n",
+    "    registered_moving = itk.elastix_registration_method(appState['fixed'], appState['moving'], parameter_object=parameters)\n",
     "    display(checkerboard(appState['fixed'], registered_moving))\n",
+    "    out.clear_output()\n",
     "\n",
     "registerButton.on_click(registerImages)"
    ]
